# machine_learning

./: .gitattributes  .gitignore  Notebook_final.ipynb  pyproject.toml
data/clean/: Accident.csv  Accident_clean_v1.csv  Accident_clean_v2.csv  Accidents_encoded.csv  Accidents_final.csv  accident_v1.csv  accident_v2.csv  accident_v3.csv  best_hyperparameters.pkl  optimized_random_forest_model.pkl  person_v1.csv  person_v2.csv  person_v3.csv  random_forest_model.pkl  rf_accident_severity_model.pkl  selected_features.pkl  unique_vpic_vs_body.csv  vehicle_v1.csv  vehicle_v2.csv  vehicle_v3.csv
data/raw/FARS_2022_National/: MIACC.CSV  pbtype.csv  person.csv  vehicle.csv
